# mailing

./: .gitignore  config copy.yaml  config.yaml  full.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile
livedesk_mailing_list/: main.py
livedesk_mailing_list/app/: streamlit.py
livedesk_mailing_list/evaluation/: evaluation_metrics.py
livedesk_mailing_list/inference/: inference.py
livedesk_mailing_list/models/: model_factory.py  transformers.py
livedesk_mailing_list/training/: hyperparameter_optimization.py  model_training.py  split.py
livedesk_mailing_list/utils/: config_loader.py  experiment.py
tests/models/: test_model_factory.py  test_transformers.py
tests/training/: test_hyperparameter_optimization.py  test_model_training.py  test_split.py
